yanl/examples/t1/correct/0404_if_if_emptyelse.yanl
program me;
var a:integer;
begin 
if true then 
    if true then 
        a:=2 else 

end.
