yanl/examples/t1/fail/0205_variable_redeclared.yanl
program qwerty;
var a:integer;
	b:integer;
	a:real;

begin
end.
